# Python-Package-Independent

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  release_a_new_version.md
src/basickit/: clock.py  pkl.py
src/independent/: __init__.py  directory.py  shutdown.py  threading.py
