[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "basickit"
version = "0.0.0.0"
dependencies = [
]
requires-python = ">= 3.6"
authors = [
    {name = "Carmelo Calafiore", email = "dr.carmelo.calafiore@gmail.com"},
]
maintainers = [
    {name = "Carmelo Calafiore", email = "dr.carmelo.calafiore@gmail.com"},
]
description = "Basic Toolkit"
readme = {file = "README.md", content-type = "text/markdown"}
license = "MIT"
license-files = ["LICENSE.txt"]
keywords = ["basic", "tools", "toolkit", "toolbox", "kit", "utilities"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Repository = "https://github.com/ccalafiore/BasicKit"
Issues = "https://github.com/ccalafiore/BasicKit/issues"
